force-app/main/default/objects/MaskedItem__mdt/MaskedItem__mdt.object-meta.xml
<CustomObject>
    <label>マスキング項目</label>
</CustomObject>