force-app/main/default/objects/MaskedItem__mdt/fields/ItemApiName__c.field-meta.xml
<CustomField>
    <fullName>ItemApiName__c</fullName>
    <label>項目API名</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>