force-app/main/default/objects/MaskedItem__mdt/fields/MaskedValue__c.field-meta.xml
<CustomField>
    <fullName>MaskedValue__c</fullName>
    <label>マスキング値</label>
    <length>40</length>
    <type>Text</type>
</CustomField>